--- a/src/index.css
+++ b/src/index.css
@@ -5,10 +5,7 @@
 
 
 *{
-  font-family: "Ubuntu Sans", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 500;
+  font-family: "Ubuntu", sans-serif;
+  font-weight: 400;
   font-style: normal;
-  font-variation-settings:
-    "wdth" 100;
 }
